[gd_scene load_steps=6 format=3 uid="uid://dv2y18ye8j7o0"]

[ext_resource type="Script" path="res://scenes/menu/MainMenuScene.gd" id="1_w6cyl"]
[ext_resource type="PackedScene" uid="uid://cik30de5gaaah" path="res://scenes/IngameScene.tscn" id="2_nw2iu"]
[ext_resource type="PackedScene" uid="uid://b4blrdjthcxnn" path="res://ui/components/GameLogo.tscn" id="3_8wdhb"]
[ext_resource type="AudioStream" uid="uid://dlchk3c1baiy8" path="res://music/corgie-title.ogg" id="4_hifbn"]

[sub_resource type="LabelSettings" id="LabelSettings_2ikbh"]
font_size = 8
font_color = Color(1, 1, 1, 0.486275)

[node name="MainMenuScene" type="Node2D"]
script = ExtResource("1_w6cyl")
game_scene = ExtResource("2_nw2iu")

[node name="UI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GameLogo" parent="UI/CenterContainer/VBoxContainer" instance=ExtResource("3_8wdhb")]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "continue"

[node name="NewGameButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "new_game"

[node name="SettingsButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "settings"

[node name="ExitButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "leave_game"

[node name="Credits" type="MarginContainer" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 10

[node name="Label" type="Label" parent="UI/CenterContainer/VBoxContainer/Credits"]
layout_mode = 2
text = "credits"
label_settings = SubResource("LabelSettings_2ikbh")
horizontal_alignment = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hifbn")
autoplay = true
bus = &"Music"
